Don't show duplicated events.

Listen to UID changes and refresh the view when that happens.

BUG: 324341
FIXED-IN: 4.12